syntax = "proto3";

package pb;

option go_package = "pb/";

message GetUserByIdReq {
  int32 id = 1;
}

message GetUsersByIdsReq {
  repeated int32 ids = 1;
}

message CreateUserReq {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message NewUserIdResp {
  int32 id = 1;
}

message PublicUserInfo {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
}

message PublicUserInfoResp {
  PublicUserInfo user = 1;
}

message PublicUsersInfoResp {
  repeated PublicUserInfo users = 1;
}

message GetUserProfileRequest {}

message User {
  int32 id = 1; // Assuming SQLModel includes an ID field
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string avatar = 6;
  string gender = 7;
  string system_role = 8;
  string status = 9;
}

service UserService {
  rpc GetUserProfile(GetUserProfileRequest) returns (User);
  rpc GetUserById(GetUserByIdReq) returns (PublicUserInfoResp);
  rpc GetUsersByIds(GetUsersByIdsReq) returns (PublicUsersInfoResp);
  rpc CreateUser(CreateUserReq) returns (NewUserIdResp);
}